charon/tests/ui/error-dependencies.out
error: Trait aliases are not supported
 --> /rustc/730d5d4095a264ef5f7c0a0781eea68c15431d45/library/core/src/ptr/metadata.rs:81:1

error: Ignoring the following item due to an error: core::ptr::metadata::Thin
 --> /rustc/730d5d4095a264ef5f7c0a0781eea68c15431d45/library/core/src/ptr/metadata.rs:81:1

error: The external definition `core::ptr::metadata::Thin` triggered errors. It is (transitively) used at the following location(s):
  --> tests/ui/error-dependencies.rs:8:13
   |
8  |     let _ = core::ptr::null::<u8>();
   |             ^^^^^^^^^^^^^^^^^^^^^^^
...
15 |         let _ = custom_null::<u8>();
   |                 ^^^^^^^^^^^^^^^^^^^
16 |     }
17 |     fn custom_null<T: core::ptr::Thin>() {}
   |                       ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

ERROR Compilation encountered 2 errors
